...
    [setAdoptFilter]
  );

  return (
    <>
      <View style={styles.titleWrap}>
        <Text style={styles.title}>전체공고</Text>
        <View style={{ marginTop: 12 }}>
          <Dropdown
            data={ADOPT_FILTERS}
            value={adoptFilter.filter}
            onChange={handlePressFilter}
            snapPoints={snapPoints}
...
      </View>
      <View style={styles.buttonGroupWrap}>
        <ButtonGroup data={ADOPT_ANIMAL_TYPES} id={adoptFilter.animalType} onChange={handleChangeType} />
      </View>
      <Searchbar
        onSubmit={handleSubmit}
        placeholder="품종 또는 지역을 입력해주세요."
        ViewStyle={{ marginBottom: 32 }}
      />
    </>
  );
};

...
